--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wefit",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -9,16 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
+    "@expo-google-fonts/roboto": "^0.2.2",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
     "expo": "~46.0.16",
-    "expo-splash-screen": "~0.16.2",
+    "expo-font": "~10.2.0",
+    "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-web": "~0.18.7"
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-web": "~0.18.7",
+    "styled-components": "^5.3.6",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.1.3"
   },
   "private": true
 }
