--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.69.6",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-modalize": "^2.1.1",
+    "react-native-portalize": "^1.0.7",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-web": "~0.18.7",
