--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/roboto": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/netinfo": "^9.3.6",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.3",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
+    "axios": "^1.1.3",
     "expo": "~46.0.16",
     "expo-font": "~10.2.0",
     "expo-splash-screen": "^0.16.2",
